--- a/app/src/main/res/layout/activity_pending_order.xml
+++ b/app/src/main/res/layout/activity_pending_order.xml
@@ -37,6 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
+                    android:visibility="gone"
                     android:background="@drawable/light_green_background"
                     android:onClick="@{()->activity.onClickNewOrder()}"
                     app:layout_constraintBottom_toBottomOf="parent"
