--- a/app/src/main/res/layout/dialog_item_filter.xml
+++ b/app/src/main/res/layout/dialog_item_filter.xml
@@ -64,7 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="Item Color">
+            android:hint="Item Color"
+            >
 
             <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                 android:id="@+id/item_color_dropdown"
@@ -76,22 +77,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:visibility="gone"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Item Subtype">
-
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/product_subtype_dropdown"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="false"
-                tools:ignore="KeyboardInaccessibleWidget" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:layout_width="match_parent"
