--- a/app/src/main/res/layout/dialog_item_filter.xml
+++ b/app/src/main/res/layout/dialog_item_filter.xml
@@ -38,8 +38,28 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="false"
+                android:inputType="textNoSuggestions"
                 tools:ignore="KeyboardInaccessibleWidget" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/item_sub_type_dropdown_container"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="Item Sub Type">
+
+            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                android:id="@+id/item_sub_type_dropdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="textNoSuggestions"
+                tools:ignore="KeyboardInaccessibleWidget" />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/item_brand_dropdown_container"
@@ -55,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="false"
+                android:inputType="textNoSuggestions"
                 tools:ignore="KeyboardInaccessibleWidget" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="false"
+                android:inputType="textNoSuggestions"
                 tools:ignore="KeyboardInaccessibleWidget" />
         </com.google.android.material.textfield.TextInputLayout>
 
