- Payment Status added in Payment filter. - Payment cancel status handled. - Order cancel status handled. - OrderPermission edit control added.

--- a/app/src/main/res/layout/dialog_delivery_filter.xml
+++ b/app/src/main/res/layout/dialog_delivery_filter.xml
@@ -83,6 +83,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:hint="Customer Number">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/customer_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:hint="Order Number">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/order_number"
