--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -560,7 +560,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="Value: "
+                                        android:text="Amount: "
                                         android:textStyle="bold"
                                         android:textColor="@color/font_color_main"
                                         android:textSize="18sp"/>
