- DateTime formatting bug fixed. - Scrollview added in all filter dialogs.

--- a/app/src/main/res/layout/dialog_delivery_filter.xml
+++ b/app/src/main/res/layout/dialog_delivery_filter.xml
@@ -8,122 +8,126 @@
             name="vm"
             type="com.akg.akg_sales.view.dialog.DeliveryFilterDialog" />
     </data>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@android:color/white"
-        >
-
-        <TextView
-            android:id="@+id/item_name"
+        android:layout_height="wrap_content">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Delivery Filter"
-            android:textAlignment="center"
-            android:textColor="@color/font_color_main"
-            android:textSize="@dimen/text_size_2"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="@android:color/white"
+            >
+
+            <TextView
+                android:id="@+id/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Delivery Filter"
+                android:textAlignment="center"
+                android:textColor="@color/font_color_main"
+                android:textSize="@dimen/text_size_2"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:hint="Load Date From">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_from"
-                android:inputType="none"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
                 android:focusable="false"
-                android:onClick="@{()->vm.onClickDateFrom()}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="Load Date From">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/date_from"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:onClick="@{()->vm.onClickDateFrom()}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:hint="Load Date To">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_to"
-                android:inputType="none"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
                 android:focusable="false"
-                android:onClick="@{()->vm.onClickDateTo()}"
+                android:hint="Load Date To">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/date_to"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:onClick="@{()->vm.onClickDateTo()}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Move Order Number">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/move_order_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Move Order Number">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/move_order_number"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Customer Number">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/customer_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Customer Number">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/customer_number"
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Order Number">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/order_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Order Number">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/order_number"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="DO Number">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/do_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="DO Number">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/do_number"
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/apply_btn"
+                android:background="@drawable/blue_background"
+                android:text="Apply Filter"
+                android:onClick="@{()->vm.onClickApplyFilter()}"
+                android:layout_margin="40dp"
+                android:textSize="@dimen/text_size_1"
+                android:textStyle="bold"/>
+        </LinearLayout>
+    </ScrollView>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/apply_btn"
-            android:background="@drawable/blue_background"
-            android:text="Apply Filter"
-            android:onClick="@{()->vm.onClickApplyFilter()}"
-            android:layout_margin="40dp"
-            android:textSize="@dimen/text_size_1"
-            android:textStyle="bold"/>
-    </LinearLayout>
 </layout>
