--- a/app/src/main/res/layout/dialog_payment_filter.xml
+++ b/app/src/main/res/layout/dialog_payment_filter.xml
@@ -9,121 +9,127 @@
             type="com.akg.akg_sales.view.dialog.PaymentFilterDialog" />
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@android:color/white"
-        >
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/item_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Payment Filter"
-            android:textAlignment="center"
-            android:textColor="@color/font_color_main"
-            android:textSize="@dimen/text_size_2"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="@android:color/white"
+            >
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:hint="Date From">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_from"
-                android:inputType="none"
-                android:focusable="false"
-                android:onClick="@{()->vm.onClickDateFrom()}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:hint="Date To">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_to"
-                android:inputType="none"
-                android:focusable="false"
-                android:onClick="@{()->vm.onClickDateTo()}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/status_dropdown_container"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Status">
-
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/status_dropdown"
+            <TextView
+                android:id="@+id/item_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="false"
-                tools:ignore="KeyboardInaccessibleWidget" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:text="Payment Filter"
+                android:textAlignment="center"
+                android:textColor="@color/font_color_main"
+                android:textSize="@dimen/text_size_2"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/customer_dropdown_container"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Customer">
-
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/customer_dropdown"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:clickable="true"
                 android:focusable="false"
-                tools:ignore="KeyboardInaccessibleWidget" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="Date From">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/date_from"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:onClick="@{()->vm.onClickDateFrom()}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/customer_number_container"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Customer Number">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/customer_number"
-                android:inputType="number"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:focusable="false"
+                android:hint="Date To">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/date_to"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:onClick="@{()->vm.onClickDateTo()}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/apply_btn"
-            android:background="@drawable/blue_background"
-            android:text="Apply Filter"
-            android:onClick="@{()->vm.onClickApplyFilter()}"
-            android:layout_margin="40dp"
-            android:textSize="@dimen/text_size_1"
-            android:textStyle="bold"/>
-    </LinearLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/status_dropdown_container"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Status">
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/status_dropdown"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="false"
+                    tools:ignore="KeyboardInaccessibleWidget" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/customer_dropdown_container"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Customer">
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/customer_dropdown"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="false"
+                    tools:ignore="KeyboardInaccessibleWidget" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/customer_number_container"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Customer Number">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/customer_number"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/apply_btn"
+                android:background="@drawable/blue_background"
+                android:text="Apply Filter"
+                android:onClick="@{()->vm.onClickApplyFilter()}"
+                android:layout_margin="40dp"
+                android:textSize="@dimen/text_size_1"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+    </ScrollView>
 </layout>
