--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -608,7 +608,7 @@
                                     android:id="@+id/note_field"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789., "
+                                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,!@#$%-_=+?:;[]()/ "
                                     android:maxLength="250"
                                     />
                             </com.google.android.material.textfield.TextInputLayout>
